# otulpweb

./: .gitignore  LICENSE  Makefile  README.org  config.dhall  default.nix  flake.nix  index.html  module.nix  otulpweb-module.nix  overlay.nix  package.nix  result  run-local-devserver-ghcjs  run-local-devserver-jsaddle  shell.nix
client/: gleam.toml  manifest.toml
nix/: mkShell.nix  pinned-misopkgs.nix  pinned-nixpkgs.nix  sources.json  update-nixpkgs.sh
otulpweb-common/: default.nix  otulpweb-common.cabal  otulpweb-common.nix  shell.nix
otulpweb-common/src/OtulpWeb/Common/: Api.hs  Rot.hs  Vigenere.hs
otulpweb-common/tests/: tasty.hs
otulpweb-common/tests/OtulpWeb/Common/: RotTest.hs  VigenereTest.hs
otulpweb-server/: config.dhall  default.nix  otulpweb-server.cabal  shell.nix
otulpweb-server/src/: Config.hs  ConfigCli.hs  ConfigFile.hs  Tournament.hs  server.hs
otulpweb-webclient/: default.nix  index.html  otulpweb-webclient.cabal  shell.nix
otulpweb-webclient/src/: BaseM.hs  Main.hs  Model.hs  State.hs  View.hs  webclient.hs
otulpweb-webclient/src/Meter/: Model.hs  View.hs
otulpweb-webclient/src/Obfuscate/: Model.hs  View.hs
otulpweb-webclient/src/Pong/: Model.hs  View.hs
