cabal-version: 2.4

name:     otulpweb-common
version:  0.1.0.3
synopsis: www.otulp.net shared code

license:      ISC
license-file: LICENSE
author:       Erlend Pedersen
maintainer:   erlendpe@online.no
copyright:    Erlend Pedersen 2021
category:     Web

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  OtulpWeb.Common.Api
                  , OtulpWeb.Common.Rot
                  , OtulpWeb.Common.Vigenere
  -- other-modules:
  build-depends:    base
                  , containers
                  , QuickCheck
                  , servant
                  , svg-builder
                  , text

test-suite tasty
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  ghc-options:      -Wall
  main-is:          tasty.hs
  other-modules:    OtulpWeb.Common.RotTest
                  , OtulpWeb.Common.VigenereTest
  build-depends:    base
                  , otulpweb-common
                  , containers
                  , tasty
                  , tasty-quickcheck
                  , tasty-hunit
