cabal-version: 2.4

name:         otulpweb-server
version:      0.1.0.2
synopsis:     www.otulp.net server

license:      ISC
license-file: LICENSE
author:       Erlend Pedersen
maintainer:   erlendpe@online.no
copyright:    Erlend Pedersen 2021
category:     Web

executable server
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -rtsopts
  main-is:          server.hs
  other-modules:    ConfigCli
                  , ConfigFile
                  , Tournament
  build-depends:    base
                  , otulpweb-common
                  , bytestring
                  , dhall
                  , exceptions
                  , generic-lens
                  , http-media
                  , http-types
                  , interpolatedstring-perl6
                  , lens
                  , mtl
                  , optparse-applicative
                  , servant
                  , servant-server
                  , svg-builder
                  , text
                  , wai
                  , wai-app-static
                  , warp
                  -- , colour
                  , diagrams-lib
                  , diagrams-svg
