cabal-version: 2.4

name:         otulpweb-server
version:      0.1.0.2
synopsis:     www.otulp.net server

license:      ISC
license-file: LICENSE
author:       Erlend Pedersen
maintainer:   erlendpe@online.no
copyright:    Erlend Pedersen 2021
category:     Web

executable server
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -rtsopts
  main-is:          server.hs
  other-modules:    Config
                  , ConfigCli
                  , ConfigFile
                  , Tournament
  build-depends:    base
                  , otulpweb-common
                  , aeson
                  , bytestring
                  , conduit
                  , containers
                  , dhall
                  , exceptions
                  , generic-lens
                  , http-media
                  , http-types
                  , interpolatedstring-perl6
                  , lens
                  , mtl
                  , optparse-applicative
                  , polysemy
                  -- , prometheus
                  -- , prometheus-metrics-ghc
                  -- , prometheus-wai-middleware
                  , resourcet
                  , servant
                  , servant-server
                  , svg-builder
                  , text
                  , time
                  , uuid
                  , wai
                  , wai-app-static
                  , warp
                  -- , colour
                  , diagrams-lib
                  , diagrams-svg
