name: otulpweb
version: 0.1.0.0
synopsis: www.otulp.net website
category: Web
license: ISC
license-file: LICENSE
build-type: Simple
cabal-version: >= 2.0

executable webclient
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: BaseM
               , Model
               , View

  ghc-options: -Wall
  ghcjs-options: -dedupe -Wall
  default-language: Haskell2010
  build-depends: base
               , miso
               , containers
               , lens
               , mtl
               , text
  if !impl(ghcjs)
    build-depends: jsaddle
                 , jsaddle-warp
                 , warp
                 , websockets
