cabal-version: 2.4

name:         otulpweb-webclient
version:      0.1.0.3
synopsis:     www.otulp.net website

license:      ISC
license-file: LICENSE
author:       Erlend Pedersen
maintainer:   erlendpe@online.no
copyright:    Erlend Pedersen 2021
category:     Web

executable webclient
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall -threaded -rtsopts
  ghcjs-options:    -dedupe -Wall -DGHCJS_GC_INTERVAL=5000
  main-is:          Main.hs
  other-modules:    BaseM
                  , Meter.Model
                  , Meter.View
                  , Model
                  , Obfuscate.Model
                  , Obfuscate.View
                  , Pong.Model
                  , Pong.View
                  , State
                  , View
  build-depends:    base
                  , otulpweb-common
                  , miso
                  , containers
                  , generic-lens
                  , jsaddle-dom
                  , lens
                  , linear
                  , mtl
                  , text
  if !impl(ghcjs)
    build-depends:  jsaddle
                  , jsaddle-warp
                  , warp
                  , websockets
